# RFID-lib

./: CMakeLists.txt  README.md  README.txt  package.xml
cmake-modules/: FindMercuryAPI.cmake
include/mrfid/: .RSSI.h.kate-swp  rfid.h
include/mwlib/: mwlib.h
src/: CMakeLists.txt  RSSI.cpp  mrfid.cpp  rfid.cpp
src/mwlib/: CMakeLists.txt  mwlib.c
srv/: AccessReader.srv  InfoTag.srv  MemoryInfo.srv  MemoryUpdate.srv  epcUpdate.srv
